[package]
name = "access-unit"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Minimal structs and helpers for working with audio and video byte streams"
repository = "https://github.com/wavey-ai/access-unit"
readme = "README.md"

[dependencies]
bytes = "1.7.1"

[dev-dependencies]
mse_fmp4 = { git = "https://github.com/wavey-ai/mse_fmp4.git" }
